Fix z-index for modal class

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,6 +12,7 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  z-index: 2;
 }
 
 .modal_is-opened {
